Add html and css styles for page 'navigation' and 'welcome'

--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
-<DOCTYPE! html>
-<html>
+<!DOCTYPE html>
+<html lang="pl">
     <head>
-        <title>...Omilu...</title> 
+        <title>...Omilu...</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="vendor">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-
     <body>
+        <div class="wraper">
         <section class="header">
+            <header class="page-header">
+                <h1> Omilu </h1>
+                <i class="fa-solid fa-spa"></i>
+            </header>
+                <div class="navigation">
+                    <ul class="navigation-list">
+                        <li><a href="#"><b>Czym jest Omilu?</b></a></li>
+                        <li><a href="#"><b>Cennik</b></a></li>
+                        <li><a href="#"><b>Kontakt</b></a></li>
+                        <li><a href="#"><b>Moje certyfikaty</b></a></li>
+                    </ul>
+                </div>
         </section>
+        </div>
+
+        <div class="wraper-2">
+        <section class="welcome">
+            <div class="welcome-container">
+                <h2> Cześć! Miło Cię widzieć </h2>
+                <h1> Lomi Lomi Nui </h2>
+            </div>
+        </section>
+        </div>
+
     </body>
 </html>
